examples/test/testpolicy11132.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy11132
  namespace: namespace324
spec:
  podSelector:
    matchLabels:
      key44: value45
      key27: value44
      key7: value32
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value15
          key18: value33
          key1: value35
      podSelector:
        matchLabels:
          key30: value10
